syntax = "proto3";
package movieservice;
import "common/common.proto";
option java_package = "com.proto.movieservice";
option java_multiple_files = true;

message MovieRequest {
  string userid = 1;
  optional common.Genre genre = 2;
}
message MovieResponse {
  common.Movie movie = 1;
}
service MovieService {
  // unary rpc call to retrieve a movie
  rpc getMovie(MovieRequest) returns (MovieResponse) {};
}